--- a/work/IIP_150.html
+++ b/work/IIP_150.html
@@ -122,6 +122,23 @@
                                 </dd>                
                             </dl>
                             <dl>
+                                <dt><label for="srchA">교육 시작일</label></dt>
+                                <dd class="flex-ac period flexible-width">
+                                    <input type="date" class="date" placeholder="">
+                                    -
+                                    <input type="date" class="date" placeholder="">
+                                </dd>
+                            </dl>
+                            <dl>
+                                <dt><label for="srchA">교육 종료일</label></dt>
+                                <dd class="flex-ac period flexible-width">
+                                    <input type="date" class="date" placeholder="">
+                                    -
+                                    <input type="date" class="date" placeholder="">
+                                </dd>
+                            </dl>
+
+                            <dl>
                                 <dt><label for="srch03">교육년도</label></dt>                            
                                 <dd class="flex-ac">
                                     <select id="srch03" class="w-100">
