--- a/work/LAP_101.html
+++ b/work/LAP_101.html
@@ -121,7 +121,7 @@
             </div>
         </div>
         <div class="top-info-group">
-            <h3>본인인증 정보</h3>
+            <h3>신청자 정보</h3>
         </div>
         <div class="com-write-table resident-chk">
             <table class="basic-info">
@@ -133,7 +133,7 @@
                 <tbody>
                     <tr>
                         <th class="txt-l">
-                            <label for="a">이름</label>
+                            <label for="a">신청자 이름</label>
                         </th>
                         <td>
                             <input type="text" id="a" class="fixed-value">
