--- a/work/LMP_001.html
+++ b/work/LMP_001.html
@@ -463,7 +463,7 @@
             </div>
         </div>
     </footer>
-    <div class="layer-pop" data-pop="pop-1" style="display: block!important;">
+    <div class="layer-pop" data-pop="pop-1">
         <div class="layer-content layer-apply-content" style="--max-width: 640px">
             <div class="layer-scroll">
                 <div class="info-area layer-apply-yes layer-apply mt-0">
