--- a/work/index.html
+++ b/work/index.html
@@ -240,7 +240,9 @@
           <td>page</td>
           <td><a href="./IIP_205.html" target="blank">IIP_205.html</a></td>
           <td class="ac"></td>
-          <td></td>
+          <td>
+            01.12 미확인 결제건 팝업 추가
+          </td>
         </tr>
         <tr class="line done">
           <th>평생교육이용권</th>
@@ -449,6 +451,14 @@
           <td><a href="./IIP_151.html">IIP_151.html</a></td>
           <td class="ac">O</td>
           <td>12.17 : 1차 퍼블리싱 완료</td>
+        </tr>
+        <tr class="line done">
+          <th>평생교육이용권</th>
+          <td>이용권 사용기관_교육결과_관리_등록</td>
+          <td>page</td>
+          <td><a href="./IIP_152.html">IIP_152.html</a></td>
+          <td class="ac">O</td>
+          <td>12.31 : 1차 퍼블리싱 추가</td>
         </tr>
         <tr class="line done">
           <th>평생교육이용권</th>
