--- a/work/IIP_100.html
+++ b/work/IIP_100.html
@@ -228,7 +228,7 @@
                             <td>12341234</td>
                             <td>10,000</td>
                             <td>서울시 은평구</td>
-                            <td>홍길*</td>
+                            <td class="click-trigger" onclick="$('[data-pop=learn-info]').show();">홍길*</td>
                             <td></td>
                             <td><button class="layer-btn ico map-yes" onclick="$('[data-pop=pop-2]').show();">매핑완료</button></td>
                             <td><button class="layer-btn ico map-no" onclick="$('[data-pop=pop-2]').show();">매핑선택</button></td>
@@ -240,7 +240,7 @@
                             <td>12341234</td>
                             <td>10,000</td>
                             <td>서울시 은평구</td>
-                            <td>홍길*</td>
+                            <td class="click-trigger" onclick="$('[data-pop=learn-info]').show();">홍길*</td>
                             <td></td>
                             <td><button class="layer-btn ico map-no" onclick="$('[data-pop=pop-1]').show();">출결선택</button></td>
                             <td><button class="layer-btn ico map-yes">매핑완료</button></td>
@@ -291,6 +291,52 @@
             </div>
         </div>
     </footer>
+    <div class="layer-pop" data-pop="learn-info">
+        <div class="layer-content">
+            <div class="layer-scroll">
+                <span class="title">학습자 정보</span>
+                <div class="info-area">
+                    <div class="com-view-table">
+                        <table>
+                            <caption>학습자 정보</caption>
+                            <colgroup>
+                                <col>
+                                <col>
+                                <col>
+                                <col>
+                            </colgroup>
+                            <thead>
+                                <tr>
+                                    <th>성명</th>
+                                    <th>생년월일</th>
+                                    <th>휴대전화번호</th>
+                                    <th>이메일</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>광진*</td>
+                                    <td>1988.01.04</td>
+                                    <td>010-4120-****</td>
+                                    <td>liet*@*.com</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <ul class="add-notice txt-indent-14">
+                        <li>* 등록된 개명정보의 경우 성명란에 (개명후 성명) 으로 조회됩니다.</li>
+                        <li>* 미등록된 개명정보의 경우 "<em class="color-red">개명확인필요</em>"로 조회됩니다.
+                        <br>이 경우 해당 사용자를 통해 평생교육바우처정보를 갱신하도록 요청하시기 바랍니다.
+                        </li>
+                    </ul>
+                    <div class="layer-btn-wrap">
+                        <button class="btns" onclick="$('[data-pop=learn-info]').hide();">닫기</button>
+                    </div>
+                </div>
+                <button class="close-btn" onclick="$('[data-pop=learn-info]').hide();"><span class="blind">레이어 팝업 닫기</span></button>
+            </div>
+        </div>
+    </div>
     <div class="layer-pop" data-pop="pop-1">
         <div class="layer-content">
             <div class="layer-scroll">
@@ -372,7 +418,7 @@
                             <li class="layer-text-tit color-red">※ 학습자 정보 추가 전 유의사항</li>
                             <li class="layer-text-desc">- <em class="color-blue">이용권 카드 본인사용 확인</em>(카드결제 정보내 이름과 실제 수강자명 일치여부 확인</li>
                             <li class="layer-text-desc">- 평생교육강좌 수강료 및 이에 해당하는 교재 외 결제, 등록불가(교재 단독 결제 불가)</li>
-                            <li class="layer-text-desc" >평생교육이용권 본인외 사용 및 목적외 사용 확인시 이용자 안내 후 카드 취소 처리 요청</li>
+                            <li class="layer-text-desc" >※ 평생교육이용권 본인외 사용 및 목적외 사용 확인시 이용자 안내 후 카드 취소 처리 요청</li>
                         </ul>
                     </div>
                     <div class="layer-btn-wrap">
