--- a/work/IIP_152.html
+++ b/work/IIP_152.html
@@ -77,14 +77,13 @@
             <div class="location-box">
                 <span class="arrow">평생교육이용권 사용기관</span>
                 <span class="arrow">교육결과 관리</span>
-                <span class="arrow">교육결과 관리 상세</span>
-                <span class="arrow">교육결과 관리 수정</span>
+                <span class="arrow">교육결과 관리 등록</span>
             </div>
         </div>
     </div>
     <div class="container wrap">
         <div class="page-header">
-            <h2 class="page-header-tit">교육결과 관리 수정</h2>
+            <h2 class="page-header-tit">교육결과 관리 등록</h2>
         </div>
         <div class="contents course-info">
             <div class="top-info-group">
@@ -236,7 +235,7 @@
                 <h3>세부 이수 현황</h3>
                 <div class="btn-wrap">
                     <div class="btn-wrap">
-                        <button type="button" class="btns bg-blue" onclick="$('[data-pop=detail-com]').show();">추가</button>
+                        <button type="button" class="btns bg-blue">추가</button>
                         <button type="button" class="btns bg-blue">예시 다운로드</button>
                         <button type="button" class="btns bg-blue">엑셀 업로드</button>
                         <button type="button" class="btns bg-blue">엑셀 다운로드</button>
@@ -352,49 +351,19 @@
             </div>
         </div>
     </footer>
-    <div class="layer-pop" data-pop="detail-com">
+    <div class="layer-pop" data-pop="pop-1">
         <div class="layer-content" style="--max-width: 1200px">
             <div class="layer-scroll">
-                <span class="title">이수현황 학습자 정보 추가</span>
+                <span class="title">학습자 정보 추가</span>
                 <div class="info-area">
-                    <div class="search-box search-multi">
-                        <dl class="search-view">
-                            <dt>
-                                <label for="">성명</label>
-                            </dt>
-                            <dd>
-                                <input type="text">
-                            </dd>
-                        </dl>
-                        <dl class="search-view">
-                            <dt>
-                                <label for="">승인일자</label>
-                            </dt>
-                            <dd>
-                                <input type="date" placeholder="이용권 선정(날짜)">
-                            </dd>
-                        </dl>
-                        <dl class="search-view">
-                            <dt>
-                                <label for="">승인번호</label>
-                            </dt>
-                            <dd>
-                                <input type="date" placeholder="이용권 선정(날짜)">
-                            </dd>
-                        </dl>
-                        <dl class="search-view">
-                            <dt>
-                                <label for="">이수현황</label>
-                            </dt>
-                            <dd>
-                                <select class="ui-select">
-                                    <option value="1">선택</option>
-                                </select> 
-                            </dd>
-                        </dl>
-                        <div class="search-btn-group">
-                            <button class="btns bg-blue">검색</button>
-                        </div>
+                    <div class="search-box">
+                        <label for="1">승인번호</label>
+                        <input type="text" id="1">
+                        <label for="2">승인일자</label>
+                        <input type="text" id="2" placeholder="생년월일 8자리">
+                        <label for="3">성명</label>
+                        <input type="text" id="3">
+                        <button class="btns">검색</button>
                     </div>
                     <div class="table-box">
                         <div class="top-info-group">
@@ -435,20 +404,16 @@
                     <div class="com-paging">
                         <button class="prev">이전</button>
                         <button class="on">1</button>
-                        <!-- <button>2</button>
+                        <button>2</button>
                         <button>3</button>
                         <button>4</button>
                         <button>5</button>
                         <span class="empty">...</span>
-                        <button>120</button> -->
+                        <button>120</button>
                         <button class="next">다음</button>
                     </div>
                 </div>
-                <div class="layer-btn-wrap">
-                    <button class="btns btn-bd" onclick="$('[data-pop=detail-com]').hide();">취소</button>
-                    <button class="btns">추가</button>
-                </div>
-                <button class="close-btn" onclick="$('[data-pop=detail-com]').hide();">
+                <button class="close-btn" onclick="$('[data-pop=pop-1]').hide();">
                     <span class="blind">
                     레이어 팝업 닫기
                     </span>
