--- a/work/IIP_205.html
+++ b/work/IIP_205.html
@@ -468,7 +468,7 @@
                                         <td>2024.09.12 14:12:22</td>
                                         <td>홍길동</td>
                                         <td>99.12.12</td>
-                                        <td><button class="btns bg-blue">등록</button></td>
+                                        <td><button class="btns bg-blue" onclick="$('[data-pop=notConfirm]').show();">등록</button></td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -491,6 +491,58 @@
                         <li class="layer-text-desc">- 평생교육강좌 수강료 및 이에 해당하는 교재 외 결제, 등록불가(교재 단독 결제 불가)</li>
                         <li class="layer-text-desc" >평생교육이용권 본인외 사용 및 목적외 사용 확인시 이용자 안내 후 카드 취소 처리 요청</li>
                     </ul>
+                </div>
+                <button class="close-btn" onclick="$('[data-pop=learn-info]').hide();">
+                    <span class="blind">
+                    레이어 팝업 닫기
+                    </span>
+                </button>
+            </div>
+        </div>
+        <div class="layer-content hide-layer-content" style="--max-width: 640px" data-pop="notConfirm">
+            <div class="layer-scroll">
+                <div class="info-area mg-0">
+                    <p class="bullet mg-0">기관 가맹번호로 확인되지 않는 결제건입니다.</p>
+                    <p class="bullet mg-0">결제건 정보에 대하여 사용기관 문의사항 게시판으로 문의바랍니다.</p>
+                    <div class="com-write-table">
+                        <table>
+                            <caption>미확인 결제건</caption>
+                            <colgroup>
+                                <col style="width: 130px;">
+                                <col>
+                                <col style="width: 130px;">
+                                <col>
+                            </colgroup>
+                            <tbody>
+                                <tr>
+                                    <th scope="row" class="txt-l">가맹번호</th>
+                                    <td>712323232</td>
+                                    <th scope="row" class="txt-l">승인번호</th>
+                                    <td>962323232</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row" class="txt-l">승인금액</th>
+                                    <td>1,000원</td>
+                                    <th scope="row" class="txt-l">승인일시</th>
+                                    <td>
+                                        2024.09.04<br>
+                                        08:45:01
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th scope="row" class="txt-l">성명</th>
+                                    <td colspan="3">국바*</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row" class="txt-l">카드번호</th>
+                                    <td colspan="3">9779-****-****-0202</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div> 
+                </div>
+                <div class="layer-btn-wrap">
+                    <button class="btns hide-layer-close" onclick="$('[data-pop=notConfirm]').hide();">확인</button>
                 </div>
                 <button class="close-btn" onclick="$('[data-pop=learn-info]').hide();">
                     <span class="blind">
