--- a/work/LAP_103.html
+++ b/work/LAP_103.html
@@ -127,10 +127,10 @@
                 <tbody>
                     <tr>
                         <th class="txt-l must-type">
-                            <label for="a">이름</label>
+                            <label for="a">이름(국문)</label>
                         </th>
                         <td>
-                            <input type="text" id="a" class="fixed-value" readonly>
+                            홍길동
                         </td>
                     </tr>
                     <tr>
@@ -139,9 +139,9 @@
                         </th>
                         <td>
                             <div class="flex-ac gap-10 fixed-value">
-                                <input type="number" id="b" maxlength="6" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);" readonly>
+                                001218
                                 -
-                                <input type="password" id="c" maxlength="7" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);" readonly>
+                                4*******
                             </div>
                         </td>
                     </tr>
@@ -150,26 +150,22 @@
                             <label for="f">신청 지역</label>
                         </th>
                         <td>
-                            <input type="text" id="f" class="fixed-value" readonly>
+                            충청남도 평생교육이용권
                         </td>
                     </tr>
                     <tr>
                         <th class="txt-l must-type">
-                            <label for="d">이용권 유형</label>
+                            <label for="d">평생교육이용권 유형</label>
                         </th>
                         <td>
-                            <input type="text" id="d" class="fixed-value" readonly>
+                            디지털
                         </td>
                     </tr>
                     <tr class="address">
                         <th class="txt-l must-type"><label for="e">주소</label></th>
                         <td class="input-group space">
-                            <div class="flex-ac">
-                                <input type="text" id="e" class="fixed-width">
-                                <button type="button" class="btns bg-blue">주소검색</button>
-                            </div>
-                            <p class="flex-ac"><input type="text" class="fixed-value"></p>
-                            <p class="flex-ac"><input type="text" class="fixed-value"></p>
+                            <p class="flex-ac"><input type="text" class="fixed-value" readonly></p>
+                            <p class="flex-ac"><input type="text" class="fixed-value" readonly></p>
                         </td>
                     </tr>
                     <tr>
@@ -226,55 +222,6 @@
                 <li>※ 회원정보 오기재, 미수정, 수신거부, 수신 불가 기종 등으로 인한 미수신은 책임지지 않음</li>
                 <li>※ 추후 휴대전화번호 등이 변경될 경우 평생교육이용권 홈페이지 [개인정보 수정] 메뉴를 통한 수정 필수</li>
             </ul>
-        </div>
-        <div class="top-info-group">
-            <h3>회원가입</h3>
-            <small>회원가입 동의 시<em class="color-red">*</em> 는 필수사항입니다.</small> 
-        </div>
-        <div class="com-write-table">
-            <table class="basic-info">
-                <caption>회원가입 정보 입력란</caption>
-                <colgroup>
-                    <col style="width: 200px;">
-                    <col>
-                </colgroup>
-                <tbody>
-                    <tr>
-                        <th class="txt-l must-type">회원가입 동의여부</th>
-                        <td>
-                            <div class="chk-box">
-                                <input type="checkbox" id="chk-5">
-                                <label for="chk-5">가입동의</label>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th class="txt-l must-type"><label for="id">회원 아이디</label></th>
-                        <td class="input-group">
-                            <div class="flex-ac">
-                                <input type="text" placeholder="영문(소문자)/숫자 조합 5~10자리" id="id" class="fixed-value">
-                                <button type="button" class="btns bg-blue">중복확인</button>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th class="txt-l must-type"><label for="pw">비밀번호</label></th>
-                        <td>
-                            <input type="password" placeholder="영문(소문자)/숫자/특수문자 조합 9~16자리" id="pw" class="fixed-value">
-                        </td>
-                    </tr>
-                    <tr>
-                        <th class="txt-l must-type"><label for="pw1">비밀번호 확인</label></th>
-                        <td>
-                            <input type="password" placeholder="영문(소문자)/숫자/특수문자 조합 9~16자리" id="pw1" class="fixed-value">
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-            <ul class="asterisk-list">
-                <li>※ 개인정보 수집 · 이용(선택)에 동의한 경우만 회원가입 가능</li>
-                <li>※ 신청 내역 확인, 이용권 카드관리 및 학습결과 관리 등 부가서비스 이용 시 회원가입 필요</li>
-            </ul>
         </div>        
         <div class="top-info-group">
             <h3>평생학습계좌 연계</h3>
@@ -291,7 +238,7 @@
             </div>
             <ul class="bullet-list">
                 <li>평생교육이용권 사용 결과는 평생학습계좌를 활용하여 관리하실 수 있습니다.</li>
-                <li>평생학습계좌번호가 없으신 분은 평생학습계좌제 홈페이지 <em class="color-primary-1c">www.all.go.kr</em> 에서도 등록하실 수 있습니다.</li>
+                <li>평생학습계좌번호가 없으신 분은 평생학습계좌제 홈페이지 <a class="color-primary-1c" href="https://www.all.go.kr" target="_blank">www.all.go.kr</a>에서도 등록하실 수 있습니다.</li>
             </ul>
         </div>
         <div class="top-info-group">
