--- a/work/LAP_201.html
+++ b/work/LAP_201.html
@@ -191,19 +191,21 @@
                                     <label for="rd0102">사용중지</label>
                                     <input type="radio" id="rd0103" name="rd01">
                                     <label for="rd0103">회수/환수</label>
+                                    <input type="radio" id="rd0104" name="rd01">
+                                    <label for="rd0104">기타</label>
                                 </div>
                             </td>
                         </tr>
                         <tr>
-                            <th colspan="2" class="txt-l">처분이 있음을 안 연월일</th>
+                            <th colspan="2" class="txt-l"><label for="date01">처분이 있음을 안 연월일</label></th>
                             <td colspan="3">
-                                <input type="date" placeholder="">
+                                <input type="date" id="date01" placeholder="">
                             </td>
                         </tr>
                         <tr>
-                            <th colspan="2" class="txt-l">처분통지를 받은 경우 통지를 받은 연월일</th>
+                            <th colspan="2" class="txt-l"><label for="date02">처분통지를 받은 경우 통지를 받은 연월일</label></th>
                             <td colspan="3">
-                                <input type="date" placeholder="">
+                                <input type="date" id="date02" placeholder="">
                             </td>
                         </tr>
                         <tr>
@@ -211,6 +213,14 @@
                             <td colspan="3">
                                 <div class="txt-box">                                    
                                     <textarea id="cont01" class="box"></textarea>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th colspan="2" class="txt-l"><label for="cont02">이의신청 취지 및 사유</label></th>
+                            <td colspan="3">
+                                <div class="txt-box">                                    
+                                    <textarea id="cont02" class="box"></textarea>
                                 </div>
                             </td>
                         </tr>
@@ -228,23 +238,32 @@
                     </tbody>
                 </table>
                 <table class="basic-info sm-show-800">
-                    <caption>신청정보 입력란</caption>
+                    <caption>이의제기 신청정보 입력란</caption>
                     <colgroup>
                         <col style="width: auto;">
                         <col>
                     </colgroup>
                     <tbody>
                         <tr>
-                            <th class="txt-l">성명</th>
-                            <td>홍길동</td>
+                            <th class="txt-l"><label for="name">성명</label></th>
+                            <td>
+                                <input type="text" id="name" class="fixed-value" value="홍길동" readonly="readonly">
+                            </td>
                         </tr>
                         <tr>
-                            <th class="txt-l">생년월일</th>
-                            <td>1976년 08월 08일</td>
+                            <th class="txt-l"><label for="birth">생년월일</label></th>
+                            <td>
+                                <input type="text" id="name" class="fixed-value" value="1976년 08월 08일" readonly="readonly"></td>
                         </tr>
-                        <tr>
-                            <th class="txt-l">주소</th>
-                            <td>(04520) 서울특별시 중구 청계천로 14 7층</td>
+                        <tr class="address">
+                            <th class="txt-l"><label for="address">주소</label></th>
+                            <td class="input-group space">
+                                <div class="flex-ac">
+                                    <input type="text" id="address" class="fixed-width" value="04520" readonly="readonly">
+                                </div>
+                                <p class="flex-ac"><input type="text" class="fixed-value" value="서울특별시 중구 청계천로" readonly="readonly"></p>
+                                <p class="flex-ac"><input type="text" class="fixed-value" value="14 7층" readonly="readonly"></p>
+                            </td>
                         </tr>
                         <tr>
                             <th class="txt-l"><label for="tel">휴대전화번호</label></th>
@@ -298,26 +317,36 @@
                         <tr>
                             <th class="txt-l">이의신청내용</th>
                             <td>
-                                <div class="radio-box">
-                                    <input type="radio" id="rd0101" name="rd01">
-                                    <label for="rd0101">선정/미선정</label>
-                                    <input type="radio" id="rd0102" name="rd01">
-                                    <label for="rd0102">사용중지</label>
-                                    <input type="radio" id="rd0103" name="rd01">
-                                    <label for="rd0103">회수/환수</label>
+                                <div class="row-gap">
+                                    <div class="radio-box">
+                                        <input type="radio" id="rd0101" name="rd01">
+                                        <label for="rd0101">선정/미선정</label>
+                                    </div>
+                                    <div class="radio-box">
+                                        <input type="radio" id="rd0102" name="rd01">
+                                        <label for="rd0102">사용중지</label>
+                                    </div>
+                                    <div class="radio-box">
+                                        <input type="radio" id="rd0103" name="rd01">
+                                        <label for="rd0103">회수/환수</label>
+                                    </div>
+                                    <div class="radio-box">
+                                        <input type="radio" id="rd0104" name="rd01">
+                                        <label for="rd0104">기타</label>
+                                    </div>
                                 </div>
                             </td>
                         </tr>
                         <tr>
-                            <th class="txt-l">처분이 있음을 안 연월일</th>
+                            <th class="txt-l"><label for="date01">처분이 있음을 안 연월일</label></th>
                             <td>
-                                <input type="date" placeholder="">
+                                <input type="date" id="date01" placeholder="">
                             </td>
                         </tr>
                         <tr>
-                            <th class="txt-l">처분통지를 받은 경우 통지를 받은 연월일</th>
+                            <th class="txt-l"><label for="date02">처분통지를 받은 경우 통지를 받은 연월일</label></th>
                             <td>
-                                <input type="date" placeholder="">
+                                <input type="date" id="date02" placeholder="">
                             </td>
                         </tr>
                         <tr>
@@ -364,7 +393,7 @@
                             <input type="checkbox" id="chk03">
                         </div>
                     </div>
-                </ul>
+                </div>
             </div>
             <div class="btns-bottom">
                 <button type="button" class="btns">목록</button>
