--- a/work/LNP_001.html
+++ b/work/LNP_001.html
@@ -125,34 +125,19 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>1</td>
+                            <td>10</td>
                             <td class="txt-l">
                                 <a href="#" class="com-view-title"><span class="table-label">공지</span> 지자체 평생교육이용권 시스템 일시중단 안내(9.27~9.28)</a>
                             </td>
                             <td>2024-10-02</td>
                         </tr>
                         <tr>
-                            <td>2</td>
+                            <td>9</td>
                             <td class="txt-l"><a href="#" class="com-view-title">[울산광역시] 2024년 울산 평생교육이용권(이용권) 2차 신청 접수 공고</a></td>
                             <td>2024-10-02</td>
                         </tr>
                         <tr>
-                            <td>3</td>
-                            <td class="txt-l"><a href="#" class="com-view-title">[울산광역시] 2024년 울산 평생교육이용권(이용권) 1차 선정자 알림 및 사용 안내</a></td>
-                            <td>2024-10-02</td>
-                        </tr>
-                        <tr>
-                            <td>4</td>
-                            <td class="txt-l"><a href="#" class="com-view-title">[울산광역시] 2024년 울산 평생교육이용권(이용권) 1차 선정자 알림 및 사용 안내</a></td>
-                            <td>2024-10-02</td>
-                        </tr>
-                        <tr>
-                            <td>5</td>
-                            <td class="txt-l"><a href="#" class="com-view-title">[울산광역시] 2024년 울산 평생교육이용권(이용권) 1차 선정자 알림 및 사용 안내</a></td>
-                            <td>2024-10-02</td>
-                        </tr>
-                        <tr>
-                            <td>6</td>
+                            <td>8</td>
                             <td class="txt-l"><a href="#" class="com-view-title">[울산광역시] 2024년 울산 평생교육이용권(이용권) 1차 선정자 알림 및 사용 안내</a></td>
                             <td>2024-10-02</td>
                         </tr>
@@ -162,17 +147,32 @@
                             <td>2024-10-02</td>
                         </tr>
                         <tr>
-                            <td>8</td>
+                            <td>6</td>
                             <td class="txt-l"><a href="#" class="com-view-title">[울산광역시] 2024년 울산 평생교육이용권(이용권) 1차 선정자 알림 및 사용 안내</a></td>
                             <td>2024-10-02</td>
                         </tr>
                         <tr>
-                            <td>9</td>
+                            <td>5</td>
                             <td class="txt-l"><a href="#" class="com-view-title">[울산광역시] 2024년 울산 평생교육이용권(이용권) 1차 선정자 알림 및 사용 안내</a></td>
                             <td>2024-10-02</td>
                         </tr>
                         <tr>
-                            <td>10</td>
+                            <td>4</td>
+                            <td class="txt-l"><a href="#" class="com-view-title">[울산광역시] 2024년 울산 평생교육이용권(이용권) 1차 선정자 알림 및 사용 안내</a></td>
+                            <td>2024-10-02</td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td class="txt-l"><a href="#" class="com-view-title">[울산광역시] 2024년 울산 평생교육이용권(이용권) 1차 선정자 알림 및 사용 안내</a></td>
+                            <td>2024-10-02</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td class="txt-l"><a href="#" class="com-view-title">[울산광역시] 2024년 울산 평생교육이용권(이용권) 1차 선정자 알림 및 사용 안내</a></td>
+                            <td>2024-10-02</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
                             <td class="txt-l"><a href="#" class="com-view-title">[울산광역시] 2024년 울산 평생교육이용권(이용권) 1차 선정자 알림 및 사용 안내</a></td>
                             <td>2024-10-02</td>
                         </tr>
@@ -182,61 +182,61 @@
             <div class="table-list sm-show-800">
                 <ul>
                     <li>
-                        <strong>[시스템공지] 지자체 평생교육이용권 시스템 일시중단 안내(9.27~9.28)</strong>
+                        <a href="#" class="com-view-title"><strong>[시스템공지] 지자체 평생교육이용권 시스템 일시중단 안내(9.27~9.28)</strong></a>
                     </li>
                     <li><strong>작성일 :</strong> 2024-10-02</li>
                 </ul>
                 <ul>
                     <li>
-                        <strong>[울산광역시] 2024년 울산 평생교육이용권(이용권) 2차 신청 접수 공고</strong> 
+                        <a href="#" class="com-view-title"><strong>[울산광역시] 2024년 울산 평생교육이용권(이용권) 2차 신청 접수 공고</strong></a> 
                     </li>
                     <li><strong>작성일 :</strong> 2024-10-02</li>
                 </ul>
                 <ul>
                     <li>
-                        <strong>[울산광역시] 2024년 울산 평생교육이용권(이용권) 1차 선정자 알림 및 사용 안내</strong>
+                        <a href="#" class="com-view-title"><strong>[울산광역시] 2024년 울산 평생교육이용권(이용권) 1차 선정자 알림 및 사용 안내</strong></a>
                     </li>
                     <li><strong>작성일 :</strong> 2024-10-02</li>
                 </ul>
                 <ul>
                     <li>
-                        <strong>[울산광역시] 2024년 울산 평생교육이용권(이용권) 신청 접수 공고</strong>
+                        <a href="#" class="com-view-title"><strong>[울산광역시] 2024년 울산 평생교육이용권(이용권) 신청 접수 공고</strong></a>
                     </li>
                     <li><strong>작성일 :</strong> 2024-10-02</li>
                 </ul>
                 <ul>
                     <li>
-                        <strong>[울산광역시] 2024년 울산 평생교육이용권(이용권) 2차 선정자 알림 및 사용 안내</strong>
+                        <a href="#" class="com-view-title"><strong>[울산광역시] 2024년 울산 평생교육이용권(이용권) 2차 선정자 알림 및 사용 안내</strong></a>
                     </li>
                     <li><strong>작성일 :</strong> 2024-10-02</li>
                 </ul>
                 <ul>
                     <li>
-                        <strong>[시스템공지] 지자체 평생교육이용권 시스템 일시중단 안내(9.27~9.28)</strong>
+                        <a href="#" class="com-view-title"><strong>[시스템공지] 지자체 평생교육이용권 시스템 일시중단 안내(9.27~9.28)</strong></a>
                     </li>
                     <li><strong>작성일 :</strong> 2024-10-02</li>
                 </ul>
                 <ul>
                     <li>
-                        <strong>[울산광역시] 2024년 울산 평생교육이용권(이용권) 2차 신청 접수 공고</strong> 
+                        <a href="#" class="com-view-title"><strong>[울산광역시] 2024년 울산 평생교육이용권(이용권) 2차 신청 접수 공고</strong></a> 
                     </li>
                     <li><strong>작성일 :</strong> 2024-10-02</li>
                 </ul>
                 <ul>
                     <li>
-                        <strong>[울산광역시] 2024년 울산 평생교육이용권(이용권) 1차 선정자 알림 및 사용 안내</strong>
+                        <a href="#" class="com-view-title"><strong>[울산광역시] 2024년 울산 평생교육이용권(이용권) 1차 선정자 알림 및 사용 안내</strong></a>
                     </li>
                     <li><strong>작성일 :</strong> 2024-10-02</li>
                 </ul>
                 <ul>
                     <li>
-                        <strong>[울산광역시] 2024년 울산 평생교육이용권(이용권) 신청 접수 공고</strong>
+                        <a href="#" class="com-view-title"><strong>[울산광역시] 2024년 울산 평생교육이용권(이용권) 신청 접수 공고</strong></a>
                     </li>
                     <li><strong>작성일 :</strong> 2024-10-02</li>
                 </ul>
                 <ul>
                     <li>
-                        <strong>[울산광역시] 2024년 울산 평생교육이용권(이용권) 2차 선정자 알림 및 사용 안내</strong>
+                        <a href="#" class="com-view-title"><strong>[울산광역시] 2024년 울산 평생교육이용권(이용권) 2차 선정자 알림 및 사용 안내</strong></a>
                     </li>
                     <li><strong>작성일 :</strong> 2024-10-02</li>
                 </ul>
