--- a/work/ILP_003.html
+++ b/work/ILP_003.html
@@ -487,7 +487,7 @@
                                     <label for="file02" class="btns bg-blue">파일첨부</label> 
                                     <input type="file" id="file02" class="file">
                                 </div>
-                                <button type="button" class="btns bg-blue" onclick="$('[data-pop=excel-res]').show();">업로드</button>
+                                <button type="button" class="btns bg-blue layer-btn" onclick="$('[data-pop=excel-res]').show();">업로드</button>
                                 <button type="button" class="btns bg-blue btn-download">양식 다운로드</button>
                             </div>
                             <p class="bullet">xlsx 파일만 업로드가 가능합니다.</p>
