--- a/work/LAP_103.html
+++ b/work/LAP_103.html
@@ -74,8 +74,8 @@
         <div class="top-location-area wrap">
             <span class="home"><span class="blind">홈</span></span>
             <div class="location-box">
-                <span class="arrow">이용권 사용기관</span>
-                <span class="arrow">이용권 사용기관 신청</span>
+                <span class="arrow">평생교육이용권</span>
+                <span class="arrow">평생교육이용권 신청</span>
             </div>
         </div>
     </div>
