--- a/work/LNP_200.html
+++ b/work/LNP_200.html
@@ -187,6 +187,13 @@
                                         <td class="txt-l"><a href="#" class="com-view-title">평생교육이용권 등록 시 “학습계좌 번호“ 입력이 나오는데, 평생학습계좌제가 무엇인가요?</a></td>
                                         <td>2024-10-02</td>
                                     </tr>
+                                    <tr>
+                                        <td>1</td>
+                                        <td class="txt-l">
+                                            <a href="#" class="com-view-title">평생교육이용권 카드 발급 방법은?</a>
+                                        </td>
+                                        <td>2024-10-02</td>
+                                    </tr>
                                 </tbody>
                             </table>
                         </div>
@@ -312,7 +319,7 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td>1</td>
+                                        <td>2</td>
                                         <td class="txt-l">
                                             <a href="#" class="com-view-title">평생교육이용권 유형 문의</a>
                                         </td>
@@ -321,7 +328,7 @@
                                         <td>미완료</td>
                                     </tr>
                                     <tr>
-                                        <td>2</td>
+                                        <td>1</td>
                                         <td class="txt-l">
                                             <a href="#" class="com-view-title">평생교육이용권 유형 문의</a>
                                         </td>
