--- a/work/LNP_300.html
+++ b/work/LNP_300.html
@@ -136,24 +136,24 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td>1</td>
+                                        <td>10</td>
                                         <td class="txt-l">
                                             <a href="#" class="com-view-title">평생교육이용권 카드 발급 방법은?</a>
                                         </td>
                                         <td>2024-10-02</td>
                                     </tr>
                                     <tr>
-                                        <td>2</td>
+                                        <td>9</td>
                                         <td class="txt-l"><a href="#" class="com-view-title">평생교육이용권 신청기간은 언제인가요?</a></td>
                                         <td>2024-10-02</td>
                                     </tr>
                                     <tr>
-                                        <td>4</td>
+                                        <td>8</td>
                                         <td class="txt-l"><a href="#" class="com-view-title">주민번호가 변경된 경우, 이후 이용절차는?</a></td>
                                         <td>2024-10-02</td>
                                     </tr>
                                     <tr>
-                                        <td>5</td>
+                                        <td>7</td>
                                         <td class="txt-l"><a href="#" class="com-view-title">개명한 경우, 평생교육희망카드를 재발급 받아야 하나요?</a></td>
                                         <td>2024-10-02</td>
                                     </tr>
@@ -163,23 +163,30 @@
                                         <td>2024-10-02</td>
                                     </tr>
                                     <tr>
-                                        <td>7</td>
+                                        <td>5</td>
                                         <td class="txt-l"><a href="#" class="com-view-title">ATM(현금자동입충금기)에서 이용권 잔액 확인이 가능한가요?</a></td>
                                         <td>2024-10-02</td>
                                     </tr>
                                     <tr>
-                                        <td>8</td>
+                                        <td>4</td>
                                         <td class="txt-l"><a href="#" class="com-view-title">평생교육이용권 이용에 지역 제한이 있나요?</a></td>
                                         <td>2024-10-02</td>
                                     </tr>
                                     <tr>
-                                        <td>9</td>
+                                        <td>3</td>
                                         <td class="txt-l"><a href="#" class="com-view-title">전액 환불의 경우 환불 신청을 해야하나요?</a></td>
                                         <td>2024-10-02</td>
                                     </tr>
                                     <tr>
-                                        <td>10</td>
+                                        <td>2</td>
                                         <td class="txt-l"><a href="#" class="com-view-title">평생교육이용권 등록 시 “학습계좌 번호“ 입력이 나오는데, 평생학습계좌제가 무엇인가요?</a></td>
+                                        <td>2024-10-02</td>
+                                    </tr>
+                                    <tr>
+                                        <td>1</td>
+                                        <td class="txt-l">
+                                            <a href="#" class="com-view-title">평생교육이용권 카드 발급 방법은?</a>
+                                        </td>
                                         <td>2024-10-02</td>
                                     </tr>
                                 </tbody>
@@ -307,7 +314,7 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td>1</td>
+                                        <td>2</td>
                                         <td class="txt-l">
                                             <a href="#" class="com-view-title">평생교육이용권 유형 문의</a>
                                         </td>
@@ -316,7 +323,7 @@
                                         <td>미완료</td>
                                     </tr>
                                     <tr>
-                                        <td>2</td>
+                                        <td>1</td>
                                         <td class="txt-l">
                                             <a href="#" class="com-view-title">평생교육이용권 유형 문의</a>
                                         </td>
