--- a/work/index.html
+++ b/work/index.html
@@ -226,7 +226,7 @@
           <td class="ac">O</td>
           <td></td>
         </tr>
-        <tr class="line">
+        <tr class="line done">
           <th>평생교육이용권</th>
           <td>이용권 사용기관_교육과정 정보 등록(일반 교육기관)</td>
           <td>page</td>
@@ -234,14 +234,15 @@
           <td class="ac"></td>
           <td></td>
         </tr>
-        <tr class="line">
+        <tr class="line done">
           <th>평생교육이용권</th>
           <td>이용권 사용기관_교육과정 정보 등록(학점은행제 평가인정 교육기관)</td>
           <td>page</td>
           <td><a href="./IIP_205.html" target="blank">IIP_205.html</a></td>
           <td class="ac"></td>
           <td>
-            01.12 미확인 결제건 팝업 추가
+            01.12 IIP.211 학습자 정보 추가 팝업 수정 <br>
+            01.12 IIP.215 미확인 결제건 팝업 추가
           </td>
         </tr>
         <tr class="line done">
@@ -747,6 +748,14 @@
         </tr>
         <tr class="line done l">
           <th>평생교육이용권</th>
+          <td>이용권 지자체_선정포기신청작성</td>
+          <td>page</td>
+          <td><a href="./LAP_301.html">LAP_301.html</a></td>
+          <td class="ac">O</td>
+          <td>12.30:1차 퍼블리싱</td>
+        </tr>
+        <tr class="line done l">
+          <th>평생교육이용권</th>
           <td>이용권 지자체_공지사항</td>
           <td>page</td>
           <td><a href="./LNP_001.html">LNP_001.html</a></td>
@@ -800,6 +809,30 @@
           <td><a href="./LNP_200.html">LNP_200.html</a></td>
           <td class="ac">O</td>
           <td>12.11 : 1차 퍼블리싱</td>
+        </tr>
+        <tr class="line done l">
+          <th>평생교육이용권</th>
+          <td>이용권 지자체_질의응답작성</td>
+          <td>page</td>
+          <td><a href="./LNP_301.html">LNP_301.html</a></td>
+          <td class="ac">O</td>
+          <td>12.30 : 1차 퍼블리싱</td>
+        </tr>
+        <tr class="line done l">
+          <th>평생교육이용권</th>
+          <td>이용권 지자체_질의응답수정</td>
+          <td>page</td>
+          <td><a href="./LNP_302.html">LNP_302.html</a></td>
+          <td class="ac">O</td>
+          <td></td>
+        </tr>
+        <tr class="line done l">
+          <th>평생교육이용권</th>
+          <td>이용권 지자체_질의응답작성조회</td>
+          <td>page</td>
+          <td><a href="./LNP_303.html">LNP_303.html</a></td>
+          <td class="ac">O</td>
+          <td></td>
         </tr>
         <tr class="line done l">
           <th>평생교육이용권</th>
