--- a/work/LAP_301.html
+++ b/work/LAP_301.html
@@ -204,6 +204,22 @@
                     </colgroup>
                     <tbody>
                         <tr>
+                            <th class="txt-l">신청기간</th>
+                            <td>2022.01.06 ~ 2022.03.31</td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">성명</th>
+                            <td>홍길동</td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">생년월일</th>
+                            <td>1976년 08월 08일</td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">주소</th>
+                            <td>(04520) 서울특별시 중구 청계천로 14 7층</td>
+                        </tr>
+                        <tr>
                             <th class="txt-l"><label for="name">성명</label></th>
                             <td>
                                 <input type="text" id="name" class="fixed-value" value="홍길동" readonly="readonly">
