메인 hover 이벤트 값 변경, 퀵메뉴 추가

--- a/work/LMP_001.html
+++ b/work/LMP_001.html
@@ -412,6 +412,7 @@
             <ul>
                 <li class="issue-info"><a href="#">발급안내</a></li>
                 <li class="nle-agency"><a href="#">국가평생교육<br>진흥원</a></li>
+                <li class="portal"><a href="#">평생교육<br>이용권 포털</a></li>
             </ul>
         </div>
     </div>
